# FrustumCam

./: .gitignore  CMakeLists.txt  README.md  camera.hpp  controller.hpp  main.cc  projection.hpp  shader.cc  shader.hpp
cmake/: glew_options.cmake  glfw_options.cmake
config/: cam.json  object.json
shaders/: draw_point.glsl
